# forskoleiden

./: .gitignore  Cargo.toml  README.md  index.html  main.rs  package-lock.json  package.json  schema.sql  tauri.conf.json  vite.config.js
src/: App.jsx
src/components/: AIPanel.jsx  NoteCard.jsx  NoteView.jsx  SettingsModal.jsx  Sidebar.jsx  TopicPanel.jsx
src/lib/: ai.js  db.js  supabase.js  topics.js
src/styles/: app.css
